fix(ui): fix modal delete overflow

--- a/UI/src/components/Modal/ConfirmDelete.module.css
+++ b/UI/src/components/Modal/ConfirmDelete.module.css
@@ -1,5 +1,5 @@
 .delete-container {
-	width: 40rem;
+	width: 35rem;
 	display: flex;
 	flex-direction: column;
 	gap: 1.2rem;
